# hermes-android

./: .gitignore  AGENTS.md  README.md  build.gradle  pyproject.toml  setup.py  step2.txt
.github/workflows/: android-build.yml  android.yml  build.yml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/helloworld/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
hermes-android-bridge/: .gitignore
hermes-android-bridge/app/: build.gradle.kts
hermes-android-bridge/app/src/main/: AndroidManifest.xml
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/: BridgeApplication.kt  MainActivity.kt
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/client/: RelayClient.kt
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/executor/: ActionExecutor.kt  ScreenReader.kt
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/media/: ScreenRecorder.kt
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/model/: ScreenNode.kt
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/power/: WakeLockManager.kt
hermes-android-bridge/app/src/main/kotlin/com/hermesandroid/bridge/server/: BridgeRouter.kt
hermes-android-bridge/app/src/main/res/layout/: activity_main.xml
hermes-android-bridge/app/src/main/res/xml/: accessibility_service_config.xml
hermes-android-bridge/gradle/: libs.versions.toml
tests/: conftest.py  test_android_tool.py
(+1 files in other folders)
